header: raise mobile breakpoint from 1050px to 1280px to fix cramped layout on 13" laptops

--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -405,7 +405,7 @@
   cursor: not-allowed;
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1280px) {
   .header {
     align-items: center;
     flex-wrap: nowrap;
