--- a/src/components/layout/Logo/Logo.module.css
+++ b/src/components/layout/Logo/Logo.module.css
@@ -50,7 +50,7 @@
   flex: 1;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1280px) {
   .logo {
     gap: 8px;
   }
